# Axiom

./: README.md  pyproject.toml  runtime.py  sovereign.axiom
axiom/: __init__.py  __main__.py  antigravity.axiom  breed.py  cli.py  compiler.py  cortex_adapter.py  diff.py  measure.py  schema.py  sovereign.axiom
